============
 Change log
============

0.5.4 (unreleased)
==================

- Nothing changed yet.


0.5.3 (2009-11-22)
==================

- After the last fix `delete all persons` did not delete any
  persons. This is now fixed.


0.5.2 (2009-11-21)
==================

- `Delete all persons` no longer tries to delete the persons which are
  users. Previously this function broke when there were users defined
  in the address book.

- Moved the function to delete a whole address book to the overview
  page of all address books, as users defined inside an address book
  are not allowed to delete their address book.


0.5.1 (2009-11-21)
==================

- Fixed namespace package declaration so the package can be installed
  on a plain vanilla python (even without setuptools installed).


0.5 (2009-11-21)
================

Features
--------

- Users having the role `Administrator` can delete all persons in the
  address book or even the whole address book on the address book edit
  form.

- Last modification time of objects is now stored and displayed (in
  UTC!).

- Users having the role `Administrator` can import data in the master
  data area.

- Added ability to enter additional packages names at installation
  (e. g. to install a specific import file readers).

- Users having the role `Administrator` can add new fields to address
  book entities in the master data area. These fields as useable for
  editors and visitors, too.

Removed features
----------------

- Removed some fields which are not always necessary and which can be
  re-added when needed as user defined fields:

  - state field on the postal address (only displayed German
    states, though),

  - sex field on person,

  - notes fields on address book, postal address, phone number, e-mail
    address, home page address, file and keyword,

  - kind fields on postal address, phone number, e-mail address and
    home page address.


Bug fixes
---------
